--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Charelston Real Estate Video Blog with Shakeima Chatman
+title: Charleston Real Estate Video Blog with Shakeima Chatman
 description: Our mission at The Chatman Group is to be your best resource for Charelston real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The The Chatman Group, your professional Charelston Real Estate Agents.
 show_custom_links: false
 custom_links:
@@ -14,7 +14,7 @@ client:
     We understand that buying or selling a home is more than just a transaction: it’s a life-changing experience. That’s why our team of highly-seasoned real estate professionals is dedicated to providing exceptional, personalized service for all of our clients. We take great pride in the relationships we build and always work relentlessly on the client’s behalf to help them achieve their real estate goals.
 
     Our team of experts represents the best and brightest in the industry, and we’re always striving to lead the field in research, innovation, and consumer education. Today’s buyers and sellers need a trusted resource that can guide them through the complex world of real estate. With our extensive knowledge and commitment to providing only the best and most timely information to our clients, we are your go-to source for real estate industry insight and advice.
-  market: Charelston
+  market: Charleston
   brand: The Chatman Group
   brokerage: Carolina Elite Real Estate
   address: 1081 E. Montague Avenue<br>North Charleston, SC 29405
@@ -33,15 +33,15 @@ CTAs:
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your Charelston Home Worth?"
+    CTA_title: "What’s Your Charleston Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
     CTA_url: http://cloudcma.com/api_widget/3ba7fe83f2b04b374775db0addc90bbc/show?post_url=cloudcma.com&source_url=ua
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a Charelston Home?"
-    CTA_text2: "Search the entire MLS for your Charelston home."
+    CTA_title2: "Looking for a Charleston Home?"
+    CTA_text2: "Search the entire MLS for your Charleston home."
     CTA_link_text2: "Search the MLS"
     CTA_url2: https://www.thechatmangroupsc.com/listings-search/#/2033763787
 
@@ -79,11 +79,11 @@ socials:
   podcast_url:
 
 podcast:
-  title: 'Charelston Real Estate Podcast with Shakeima Chatman'
+  title: 'Charleston Real Estate Podcast with Shakeima Chatman'
   categories: Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Charelston Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Chatman Group - your professional Charelston Real Estate Agents.'
+  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Charleston Area Real Estate Market'
+  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Chatman Group - your professional Charleston Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Charelston, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: 'Shakeima Chatman'
 
@@ -91,7 +91,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: Charelston Real Estate Video Blog
+  hero_text: Charleston Real Estate Video Blog
   hero_background_hex: '#999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
