--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,13 +15,13 @@ client:
 
     Our team of experts represents the best and brightest in the industry, and we’re always striving to lead the field in research, innovation, and consumer education. Today’s buyers and sellers need a trusted resource that can guide them through the complex world of real estate. With our extensive knowledge and commitment to providing only the best and most timely information to our clients, we are your go-to source for real estate industry insight and advice.
   market: Charleston
-  brand: The Chatman Group
-  brokerage: Carolina Elite Real Estate
+  brand: The Chatman Group with Carolina Elite Real Estate
+  brokerage: 
   address: 1081 E. Montague Avenue<br>North Charleston, SC 29405
-  phone: 843-532-0330
-  phone_type: Cell
-  phone2: 843-225-8830
-  phone2_type: Office
+  phone: 843-900-6984
+  phone_type: 
+  phone2: 
+  phone2_type: 
   email: Shakeima@chatmanrealty.com
   url: http://www.thechatmangroupsc.com
 
