--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,98 +1,122 @@
 audit_header: false
 title: Charleston Real Estate Video Blog with Shakeima Chatman
-description: Our mission at The Chatman Group is to be your best resource for Charelston real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The The Chatman Group, your professional Charelston Real Estate Agents.
+description: >-
+  Our mission at The Chatman Group is to be your best resource for Charelston
+  real estate advice. Whether you are a buyer, seller, or investor, our team of
+  professionals can answer any questions you might have about real estate. If
+  you are looking to buy or sell a home, you can get all the information and the
+  latest updates, tips, and tricks from The The Chatman Group, your professional
+  Charelston Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Shakeima Chatman
   title:
   license_number:
-  about_markdown: |
-    We understand that buying or selling a home is more than just a transaction: it’s a life-changing experience. That’s why our team of highly-seasoned real estate professionals is dedicated to providing exceptional, personalized service for all of our clients. We take great pride in the relationships we build and always work relentlessly on the client’s behalf to help them achieve their real estate goals.
+  about_markdown: >
+    We understand that buying or selling a home is more than just a transaction:
+    it’s a life-changing experience. That’s why our team of highly-seasoned real
+    estate professionals is dedicated to providing exceptional, personalized
+    service for all of our clients. We take great pride in the relationships we
+    build and always work relentlessly on the client’s behalf to help them
+    achieve their real estate goals.
 
-    Our team of experts represents the best and brightest in the industry, and we’re always striving to lead the field in research, innovation, and consumer education. Today’s buyers and sellers need a trusted resource that can guide them through the complex world of real estate. With our extensive knowledge and commitment to providing only the best and most timely information to our clients, we are your go-to source for real estate industry insight and advice.
+
+    Our team of experts represents the best and brightest in the industry, and
+    we’re always striving to lead the field in research, innovation, and
+    consumer education. Today’s buyers and sellers need a trusted resource that
+    can guide them through the complex world of real estate. With our extensive
+    knowledge and commitment to providing only the best and most timely
+    information to our clients, we are your go-to source for real estate
+    industry insight and advice.
   market: Charleston
   brand: The Chatman Group with<br>Carolina Elite Real Estate
   brokerage:
-  address: 1081 E. Montague Avenue<br>North Charleston, SC 29405
+  address: '1081 E. Montague Avenue<br>North Charleston, SC 29405'
   phone: 843-900-6984
   phone_type:
   phone2:
   phone2_type:
   email: Shakeima@chatmanrealty.com
-  url: http://www.thechatmangroupsc.com
-
+  url: 'http://www.thechatmangroupsc.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://cloudcma.com/api_widget/3ba7fe83f2b04b374775db0addc90bbc/show?post_url=cloudcma.com&source_url=ua
+  first_CTA_URL: >-
+    http://cloudcma.com/api_widget/3ba7fe83f2b04b374775db0addc90bbc/show?post_url=cloudcma.com&source_url=ua
   second_CTA_text: Home Search
-  second_CTA_URL: https://www.thechatmangroupsc.com/listings-search/#/2033763787
-
+  second_CTA_URL: 'https://www.thechatmangroupsc.com/listings-search/#/2033763787'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your Charleston Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free Home Value Report"
-    CTA_url: http://cloudcma.com/api_widget/3ba7fe83f2b04b374775db0addc90bbc/show?post_url=cloudcma.com&source_url=ua
-
+    CTA_title: What’s Your Charleston Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free Home Value Report
+    CTA_url: 'https://www.thechatmangroupsc.com/what-is-my-home-worth'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a Charleston Home?"
-    CTA_text2: "Search the entire MLS for your Charleston home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: https://www.thechatmangroupsc.com/listings-search/#/2033763787
-
+    CTA_title2: Looking for a Charleston Home?
+    CTA_text2: Search the entire MLS for your Charleston home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'https://www.thechatmangroupsc.com/listings-search/#/2033763787'
 third_sidebar_CTA:
   - CTA_image_path3: /img/cta-images/001.png
-    CTA_title3: "Possess the Land"
-    CTA_text3: "The Believer's Guide to Home Buying"
-    CTA_link_text3: "Get Your Copy"
-    CTA_url3: http://www.howtopossesstheland.com/
-
+    CTA_title3: Possess the Land
+    CTA_text3: The Believer's Guide to Home Buying
+    CTA_link_text3: Get Your Copy
+    CTA_url3: 'http://www.howtopossesstheland.com/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/chatmangroupsc
-  linkedin_url: https://www.linkedin.com/in/chatmangroupsc
+  facebook_url: 'https://www.facebook.com/chatmangroupsc'
+  linkedin_url: 'https://www.linkedin.com/in/chatmangroupsc'
   gplus_url:
-  youtube_url: http://www.youtube.com/chatmanrealty
-  twitter_url: https://twitter.com/chatmangroupsc
-  instagram_url: http://instagram.com/chatmangroupsc
+  youtube_url: 'http://www.youtube.com/chatmanrealty'
+  twitter_url: 'https://twitter.com/chatmangroupsc'
+  instagram_url: 'http://instagram.com/chatmangroupsc'
   pinterest_url:
   zillow_url:
   trulia_url:
   yelp_url:
   podcast_url:
-
 podcast:
-  title: 'Charleston Real Estate Podcast with Shakeima Chatman'
-  categories: Education
+  title: Charleston Real Estate Podcast with Shakeima Chatman
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Charleston Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Chatman Group - your professional Charleston Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Charelston, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Shakeima Chatman'
-
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Charleston
+    Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from The Chatman Group - your professional
+    Charleston Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in Charelston, home
+    selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
+  author: Shakeima Chatman
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
   hero_text: Charleston Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
@@ -101,22 +125,19 @@ site_colors:
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 navbar_colors:
   border_bottom:
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: black
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
   button_padding_height_number: 15
   button_border_color: '#ffffff'
-  button_background_color: transparent
+  button_background_color: 'rgba(0, 0, 0, 0)'
   button_text_color: '#123456'
   secondary_button_border_color: '#ffffff'
   secondary_button_background_color: 'rgba(0, 0, 0, 0)'
