Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -60,7 +60,7 @@ second_sidebar_CTA:
     CTA_title2: Looking for a Charleston Home?
     CTA_text2: Search the entire MLS for your Charleston home.
     CTA_link_text2: Search the MLS
-    CTA_url2: 'https://www.thechatmangroupsc.com/listings-search/#/2033763787'
+    CTA_url2: 'https://www.thechatmangroupsc.com/'
 third_sidebar_CTA:
   - CTA_image_path3: /img/cta-images/001.png
     CTA_title3: Possess the Land
