--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -66,7 +66,7 @@ third_sidebar_CTA:
     CTA_title3: Possess the Land
     CTA_text3: The Believer's Guide to Home Buying
     CTA_link_text3: Get Your Copy
-    CTA_url3: 'http://www.howtopossesstheland.com/'
+    CTA_url3: 'https://www.amazon.com/Possess-Land-Believers-Guide-Buying/dp/099861100X'
 lender:
   show_section: false
   header_text: Preferred Lender
