--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -45,7 +45,7 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'https://www.thechatmangroupsc.com/what-is-my-home-worth'
   second_CTA_text: Home Search
-  second_CTA_URL: 'https://www.thechatmangroupsc.com/listings-search/#/2033763787'
+  second_CTA_URL: 'https://www.thechatmangroupsc.com/'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
     CTA_title: What’s Your Charleston Home Worth?
